--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">  
   <head>
+
+    <style>
+
+    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Scada" rel="stylesheet">
     <title>{% block title %} Dell{% endblock %}</title>  
-  </head>
+  </head>  
   <body>
 
     {% comment %} {% include "navbar.html" %} {% endcomment %}
