--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
                                     {% endif %}
                                 </div>
                                 <div class="shoppify" style="padding:5px; margin: 20px; font-size: 8px ; word-wrap: break-word;">
-                                <div class="col s4"><a class="waves-effect waves-light btn" style="word-wrap: break-word; overflow: visible;"><i class="material-icons right">flash_on</i>Express Checkout</a></div>
+                                <div class="col s4"><a class="waves-effect waves-light btn" style="word-wrap: break-word; overflow: visible;" href="{% url 'expressCheckout' pk=product.sku %}"><i class="material-icons right">flash_on</i>Express Checkout</a></div>
                                 <div class="col s4"><a class="waves-effect waves-light btn tooltipped" data-position="top" data-tooltip="Ask our chatbot for more details"><i class="material-icons right">chat</i>Ask Bikki</a></div>
                                 <div class="col s4"><a class="waves-effect waves-light btn" style="font-size: 12px"><i class="material-icons right">add_shopping_cart</i>Add to Cart</a></div>
                                 </div>
