--- a/templates/home.html
+++ b/templates/home.html
@@ -22,13 +22,13 @@
                                     {% if product.discountAvilable == True %}
                                         <b>Price: </b> <span class="dis" style="color:grey"><strike> {{product.price}}</strike></span> <span class="newPrice" style="color: red">{{product.discountPrice}}</span>
                                     {% else %}
-                                        <p>Nope</p>
+                                        <b>Price: </b> <span>{{product.price}}</span>
                                     {% endif %}
                                 </div>
                                 <div class="shoppify" style="padding:5px; margin: 20px; font-size: 8px ; word-wrap: break-word;">
-                                <div class="col s4"><a class="waves-effect waves-light btn" style="word-wrap: break-word; overflow: visible;" href="{% url 'expressCheckout' pk=product.sku %}"><i class="material-icons right">flash_on</i>Express Checkout</a></div>
-                                <div class="col s4"><a class="waves-effect waves-light btn tooltipped" data-position="top" data-tooltip="Ask our chatbot for more details"><i class="material-icons right">chat</i>Ask Bikki</a></div>
-                                <div class="col s4"><a class="waves-effect waves-light btn" style="font-size: 12px"><i class="material-icons right">add_shopping_cart</i>Add to Cart</a></div>
+                                    <div class="col s4"><a class="waves-effect waves-light btn" style="word-wrap: break-word; overflow: visible;width:100%; background-color:red" href="{% url 'expressCheckout' pk=product.sku %}"><i class="material-icons right">flash_on</i>Express Checkout</a></div>
+                                    <div class="col s4"><a class="waves-effect waves-light btn tooltipped" style="width:100%; background-color:#129cf3" data-position="top" data-tooltip="Ask our chatbot for more details"><i class="material-icons right">chat</i>Ask Bikki</a></div>
+                                    <div class="col s4"><a class="waves-effect waves-light btn" style="font-size: 12px; width:100%; background-color:#F4C724"><i class="material-icons right">add_shopping_cart</i>Add to Cart</a></div>
                                 </div>
                             </div>
                         </div>
