--- a/templates/orderConfirmation.html
+++ b/templates/orderConfirmation.html
@@ -2,36 +2,39 @@
 {% block content %}    
     <div class="row">
         <div class="col s12">
-            <h2 style = "text-align: center"><span style="color: green">Congratulations</span> your express order of {{product.title}} is placed.</h2>
-            <div class="card" style="height:400px;">
-                <div class="card-title">
-                    <h4 style="text-align: center">Order Summary</h4>
-                </div>
+            <h2 style = "text-align: center"><span style="color: green">Congratulations</span> your <span style="color:#FF3E4D">Express</span> order of {{product.title}} is placed.</h2>
+            <div class="card" style="height:550px;">
                 <div class="card-content">
+                <div class="card-title">
+                    <h4 style="text-align: center; margin: 10px;">Order Summary</h4>
+                </div>
                     <div class="col s6">
-                        <img class="responsive-img" style="height: 250px" src = "/media/{{product.imgUrl}}">
+                        <img class="responsive-img" style="height: 350px" src = "/media/{{product.imgUrl}}">
                         <p>Your order has been placed <span style="color:green">successfully</span> and shipping details will be communicated shortly.</p>           
                     </div>
                     <div class="col s6 Adresses">
                         <div class="shippingAddress">
                             <div class="card">
-                                <div class="card-title" style="text-align:center">Shipping Address</div>
                                 <div class="card-content">
+                                <div class="card-title" style="text-align:center">Shipping Address</div>
                                     <p>{{user.first_name}} {{user.last_name}}</p>
                                     <p>{{user.profile.shippingAddress}}</p>                                    
                                 </div>
                             </div>
                         </div>
                         <div class="shippingAddress">
-                            <div class="card">
-                                <div class="card-title" style="text-align:center">Billing Address</div>
+                            <div class="card">                                
                                 <div class="card-content">
-                                    {{user.profile.shippingAddress}}
+                                <div class="card-title" style="text-align:center">Billing Address</div>
+                                    <p>{{user.first_name}} {{user.last_name}}</p>
+                                    <p>{{user.profile.shippingAddress}}</p>
                                 </div>
                             </div>
                         </div>
                         <div class="paymentMethod">
                             <b>Payment Method:</b> <i>{{user.profile.billingMethod}} (default)</i>
+                            <br>
+                            <b>Price: </b> <i>{{product.price}} <b>INR</b></i>
                             <p style="color:#A4B0BD">You can change default payment method in your profile.</p>
                         </div>
                     </div>
