--- a/templates/productDetail.html
+++ b/templates/productDetail.html
@@ -1,11 +1,48 @@
 {% extends 'base.html' %}
 {% block content %}    
-    {% comment %} <div class="col s4">
-        <img id="productImage" src="/media/{{object.imgUrl}}" style="height: 350px" data-zoom-image="/media/{{object.imgUrl}}" />
-    </div>        
-    <div class="sidecar" style="margin: 30px; padding: 30px;">
-        <div class="col s8">
-            <h2>{{object.title}}</h2>
+    <div class="row" style="margin:30px">
+    <div class="col s12">
+        <div class="card" style="margin:10px; height: 500px">
+            <div class="card-content">
+            <span class="card-title" style="text-align: center">{{object.title}}</span>
+            <div class="col s4">
+                <img id="productImage" src="/media/{{object.imgUrl}}" style="height: 350px" data-zoom-image="/media/{{object.imgUrl}}" />
+            </div>   
+            <div class="col s8">
+                <div class="priceDetails" style="padding-left: 20px; margin: 20px; margin-top: 30px; padding-top:40px;">
+                    {% if object.discountAvilable == True %}
+                        <b>Price: </b> <span class="dis" style="color:grey"><strike> {{object.price}}</strike></span> <span class="newPrice" style="color: red">{{object.discountPrice}}</span>
+                    {% else %}
+                        <b>Price: </b> <span>{{object.price}}</span>
+                    {% endif %}
+                </div>  
+                <div class="specs" style="padding-left: 20px; margin: 20px;">
+                <b>Specifications: </b>
+                    <p>{{object.specifications}}</p>
+                <b>Stock</b>
+                    {% if object.stock == "1" %}
+                        <p style="color: red">Only {{object.stock}} left in stock</p>
+                    {% else %}
+                        <p style="color: green">In Stock</p>
+                    {% endif %}                    
+                </div>
+            </div>
+        <div class="col s12">
+            <div class="shoppify" style="padding:5px; margin: 20px; font-size: 8px ; word-wrap: break-word;">
+            <div class="col s4"><a class="waves-effect waves-light btn" style="word-wrap: break-word; overflow: visible;width:100%; background-color:red" href="{% url 'expressCheckout' pk=object.sku %}"><i class="material-icons right">flash_on</i>Express Checkout</a></div>
+            <div class="col s4"><a class="waves-effect waves-light btn tooltipped" style="width:100%; background-color:#129cf3" data-position="top" data-tooltip="Ask our chatbot for more details"><i class="material-icons right">chat</i>Ask Bikki</a></div>
+            <div class="col s4"><a class="waves-effect waves-light btn" style="font-size: 12px; width:100%; background-color:#F4C724"><i class="material-icons right">add_shopping_cart</i>Add to Cart</a></div>
+            </div>
         </div>
-    </div> {% endcomment %}
+            </div>
+        </div>
+    </div>
+        <div class="col s12">
+            <div class="card" style="margin:10px;">
+                <div class="card-content">
+                    <span class="card-title" style="text-align: center">Reviews</span>                    
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
