--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,20 @@
   <head>
 
     <style>
-
+      .quadrat {
+        -webkit-animation: boxBlink 1s infinite;  /* Safari 4+ */
+        -moz-animation: boxBlink 1s infinite;  /* Fx 5+ */
+        -o-animation: boxBlink 1s infinite;  /* Opera 12+ */
+        animation: boxBlink 1s infinite;  /* IE 10+, Fx 29+ */
+      }
+      @-webkit-keyframes boxBlink {
+        0%, 49% {
+          border: 2px solid #EC4849;
+        }
+        50%, 100% {
+          border: 2px solid white;
+        }
+      }
     </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
