--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,13 @@
           border: 2px solid white;
         }
       }
+      .card-title{
+        text-align: center;
+      }
     </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
