--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,7 @@
     <title>{% block title %} Dell{% endblock %}</title>  
   </head>  
   <body>
-
-    {% comment %} {% include "navbar.html" %} {% endcomment %}
+    {% include "navbar.html" %}
     <main> 
     <div class="container">
         {% block content %}
@@ -40,7 +39,8 @@
     </div>
   </div>
   </main> 
-  </div>  
+  </div>
+  {% include "footer.html" %}
   {% include "script.html" %}
   </body>
 </html>
