--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row">
     <div class="col s12" style="text-align: center">
-        <h2>Dell Digital</h2>
+        {% comment %} <h2>Dell Digital</h2> {% endcomment %}
     </div>    
         {% for product in qset %}
             <div class="col s12">
