--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -13,14 +13,16 @@
                     <img class="responsive-img" style="height: 150px;" src = "/media/{{product2.imgUrl}}">
                     <p>{{product1.title}}</p>
                 </div>
+                <p>Price of group : ₹{{laptopGroupPrice}}
+                </p>
             </div>
         </div>
         <div class="card">
             <div class="card-content">
                     <div class="row" style="margin-bottom: -10px;text-align:center;">
-                    <div class="col s4"><a href="#"><i class="medium material-icons">share</i></a></div>
-                    <div class="col s4"><a href="#"><i class="medium material-icons">compare_arrows</i></a></div>
-                    <div class="col s4"><a href="#"><i class="medium material-icons">chat</i></a></div>
+                    <div class="col s4"><a href="#"><i class="small material-icons">share</i></a></div>
+                    <div class="col s4"><a href="#"><i class="small material-icons">compare_arrows</i></a></div>
+                    <div class="col s4"><a href="#"><i class="small material-icons">chat</i></a></div>
                 </div>
             </div>
         </div>
@@ -38,9 +40,9 @@
         <div class="card">
             <div class="card-content">
                     <div class="row" style="margin-bottom: -10px;text-align:center;">
-                    <div class="col s4"><a href="#"><i class="medium material-icons">share</i></a></div>
-                    <div class="col s4"><a href="#"><i class="medium material-icons">compare_arrows</i></a></div>
-                    <div class="col s4"><a href="#"><i class="medium material-icons">chat</i></a></div>
+                    <div class="col s4"><a href="#"><i class="small material-icons">share</i></a></div>
+                    <div class="col s4"><a href="#"><i class="small material-icons">compare_arrows</i></a></div>
+                    <div class="col s4"><a href="#"><i class="small material-icons">chat</i></a></div>
                 </div>
             </div>
         </div>
