--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -22,7 +22,7 @@
                     <div class="row" style="margin-bottom: -10px;text-align:center;">
                     <div class="col s4"><a href="#"><i class="small material-icons">share</i></a></div>
                     <div class="col s4"><a href="#"><i class="small material-icons">compare_arrows</i></a></div>
-                    <div class="col s4"><a href="#"><i class="small material-icons">chat</i></a></div>
+                    <div class="col s4"><a href="/askBikki/1/2"><i class="small material-icons">chat</i></a></div>
                 </div>
             </div>
         </div>
@@ -35,6 +35,8 @@
                     <img class="responsive-img" style="height: 150px;" src = "/media/{{product3.imgUrl}}">
                     <p>{{product3.title}}</p>
                 </div>
+                <p>Price of group : ₹{{desktopPrice}}
+                </p>
             </div>
         </div>
         <div class="card">
@@ -42,7 +44,7 @@
                     <div class="row" style="margin-bottom: -10px;text-align:center;">
                     <div class="col s4"><a href="#"><i class="small material-icons">share</i></a></div>
                     <div class="col s4"><a href="#"><i class="small material-icons">compare_arrows</i></a></div>
-                    <div class="col s4"><a href="#"><i class="small material-icons">chat</i></a></div>
+                    <div class="col s4"><a href="/askBikki/1/2"><i class="small material-icons">chat</i></a></div>
                 </div>
             </div>
         </div>
@@ -59,6 +61,8 @@
                     <img class="responsive-img" style="height: 100px;" src = "/media/{{product4.imgUrl}}">
                     <p>{{product4.title}}</p>
                 </div>
+                <p>Price of group : ₹{{togetherPrice}}
+                </p>
             </div>
         </div>
         <div class="card">
@@ -66,7 +70,7 @@
                     <div class="row" style="margin-bottom: -10px;text-align:center;">
                     <div class="col s4"><a href="#"><i class="small material-icons">share</i></a></div>
                     <div class="col s4"><a href="#"><i class="small material-icons">compare_arrows</i></a></div>
-                    <div class="col s4"><a href="#"><i class="small material-icons">chat</i></a></div>
+                    <div class="col s4"><a href="/askBikki/1/2"><i class="small material-icons">chat</i></a></div>
                 </div>
             </div>
         </div>
