--- a/templates/askBikki.html
+++ b/templates/askBikki.html
@@ -5,7 +5,107 @@
         <h2 style="text-align:center">Ask Bikki</h2>
     </div>
     <div class="col s6">
-        <p>Todo</p>
+        <div class="card" style="overflow-y: scroll; height:850px;">
+            <div class="card-content">
+                <span class="card-title">Chat with <span class="cname" style="color:red">Bikki</span></span>                
+                    <div class="row">
+                        <div class="col s6">
+                            <p class="leftText">Hey {{request.user.first_name}} {{request.user.last_name}}, I see that you are interested in laptops. I think I can help you if your confused about choosing the laptops.</p>
+                        </div>
+                        <div class="col s6"></div>                    
+                    </div>                
+                    <div class="row">
+                        <div class="col s6"></div>
+                        <div class="col s6">
+                        <p class="rightText">Which do you think is the best for me?</p>
+                    </div>
+                </div>
+                    <div class="row">
+                        <div class="col s6">
+                            <p class="leftText">Hey {{request.user.first_name}} {{request.user.last_name}}, I see that you are interested in laptops. I think I can help you if your confused about choosing the laptops.</p>
+                        </div>
+                        <div class="col s6"></div>                    
+                    </div>                
+                    <div class="row">
+                        <div class="col s6"></div>
+                        <div class="col s6">
+                        <p class="rightText">Which do you think is the best for me?</p>
+                    </div>
+                </div>
+                    <div class="row">
+                        <div class="col s6">
+                            <p class="leftText">I see that Dell 9750, from you cart, suits your needs, based on your profile and history</p>
+                        </div>
+                        <div class="col s6"></div>                    
+                    </div>                
+                    <div class="row">
+                        <div class="col s6"></div>
+                        <div class="col s6">
+                        <p class="rightText">Why do you think, 9750 is best for me?</p>
+                    </div>
+                </div>
+                    <div class="row">
+                        <div class="col s6">
+                            <p class="leftText">I see that Dell 9750, from you cart, suits your needs, based on your profile and history</p>
+                        </div>
+                        <div class="col s6"></div>                    
+                    </div>                
+                    <div class="row">
+                        <div class="col s6"></div>
+                        <div class="col s6">
+                        <p class="rightText">Why do you think, 9750 is best for me?</p>
+                    </div>
+                </div>
+                    <div class="row">
+                        <div class="col s6">
+                            <p class="leftText">Because it has the best cost to graphics ratio in this cart group.</p>
+                        </div>
+                        <div class="col s6"></div>                    
+                    </div>                
+                    <div class="row">
+                        <div class="col s6"></div>
+                        <div class="col s6">
+                        <p class="rightText">Show me some reviews for this product</p>
+                    </div>
+                </div>
+                <div class="row">
+                        <div class="col s6">
+                            <p class="leftText">"Shows reviews based on collaborative filtering"</p>
+                        </div>
+                        <div class="col s6"></div>                    
+                    </div>                
+                    <div class="row">
+                        <div class="col s6"></div>
+                        <div class="col s6">
+                        <p class="rightText">Let’s talk about the compatibility of the products</p>
+                    </div>
+                </div>
+                    <div class="row">
+                        <div class="col s6">
+                            <p class="leftText">Show some reviews that talk about these, (reviews from persons in same user group).</p>
+                        </div>
+                        <div class="col s6"></div>                    
+                    </div>                
+                    <div class="row">
+                        <div class="col s6"></div>
+                        <div class="col s6">
+                        <p class="rightText">Show me the visualisation of weight for different items.</p>
+                    </div>
+                </div>
+                    <div class="row">
+                        <div class="col s6">
+                            <img src="/media/chart.jpg" class="leftText img img-responsive" alt="">
+                        </div>
+                        <div class="col s6"></div>                    
+                    </div>                
+                    <div class="row">
+                        <div class="col s6"></div>
+                        <div class="col s6">
+                        <p class="leftText">Dell 9750 is compatible with the best cost to graphics ration. We suggest you to buy this</p>
+                    </div>
+                </div>             
+            </div>
+        </div>
     </div>
     <div class="col s6">
         <div class="row">        
