--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,24 @@
       .card-title{
         text-align: center;
       }
+      .leftText{
+        text-align:left;
+        background-color: #129cf3;
+        width: 100%;
+        border-radius: 15px;
+        margin: 10px;
+        padding: 5px;
+        font-size: 14px;
+      }      
+      .rightText{
+        text-align:left;                
+        background-color: #43BE31;
+        width: 100%;
+        border-radius: 15px;
+        margin: 10px;
+        padding: 5px;
+        font-size: 14px;
+      }
     </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
