--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -82,5 +82,17 @@
             </div>
         </div>
     </div>
+    <div class="col s12">
+        <div class="card">
+            <div class="card-content">
+                <div class="row">
+                    <div class="col s6"><b>Price: ₹407164.0</b></div>
+                    <div class="col s6">
+                        <a class="waves-effect waves-light btn" style="width:100%; background-color:#43BE31" href="complete"><i class="material-icons right">shopping_cart</i>Checkout</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
