--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -25,7 +25,7 @@
         <div class="card">
             <div class="card-content">
                     <div class="row" style="margin-bottom: -10px;text-align:center;">
-                    <div class="col s4"><a href="#"><i class="small material-icons">share</i></a></div>
+                    <div class="col s4"><a href="shareChat"><i class="small material-icons">share</i></a></div>
                     <div class="col s4"><a href="compare"><i class="small material-icons">compare_arrows</i></a></div>
                     <div class="col s4"><a href="/askBikki/1/2"><i class="small material-icons">chat</i></a></div>
                 </div>
